--- a/scss/layouts/_general.scss
+++ b/scss/layouts/_general.scss
@@ -1,55 +1,14 @@
 @use '../base/index'as *;
 
-///Amount of spacing between the sidebar and the main content - 
-/// increasing this decreases the width of the sidebar 
-
 //TWO COLUMN LAYOUT -  WRAPPING
 .layout--twocol-section {
-  // display: flex;
-  // flex-wrap: wrap;
   display: grid;
   grid-template-columns: 3fr 1fr !important;
   gap: 2rem;
-  // outline: 1px solid blue;
 }
 
 .layout--twocol-section > .layout__region {
-  // flex: 0 1 100%;
-  // outline: 1px solid red;
-}
 
-@media screen and (min-width: 40em) {
-  // .layout--twocol-section.layout--twocol-section--50-50 > .layout__region--first,
-  // .layout--twocol-section.layout--twocol-section--50-50 > .layout__region--second {
-  //   flex: 0 1 50%;
-  //   outline: 12px solid orange;
-  // }
-
-  .layout--twocol-section.layout--twocol-section--33-67 > .layout__region--first,
-  .layout--twocol-section.layout--twocol-section--67-33 > .layout__region--second {
-    // flex: 0 1 33%;
-    flex: initial;
-    // outline: 12px solid green;
-  }
-
-  .layout--twocol-section.layout--twocol-section--33-67 > .layout__region--second,
-  .layout--twocol-section.layout--twocol-section--67-33 > .layout__region--first {
-    // flex: 0 1 67%;
-    flex: initial;
-    // outline: 12px solid darkmagenta;
-  }
-
-  // .layout--twocol-section.layout--twocol-section--25-75 > .layout__region--first,
-  // .layout--twocol-section.layout--twocol-section--75-25 > .layout__region--second {
-  //   flex: 0 1 25%;
-  //   outline: 12px solid yellowgreen;
-  // }
-
-  // .layout--twocol-section.layout--twocol-section--25-75 > .layout__region--second,
-  // .layout--twocol-section.layout--twocol-section--75-25 > .layout__region--first {
-  //   flex: 0 1 75%;
-  //   outline: 12px solid indigo;
-  // }
 }
 
 @media screen and (max-width: #{$tablet-max}) {
@@ -60,17 +19,13 @@
 
 .layout__region .layout__region--first .uvalib-col--first {
   max-width: 100vw;
-  // padding-right: 3.5rem;
   @media screen and (min-width: #{$sm}) {
-    // padding-right: 0;
     // background-color: blueviolet;
   }
   @media screen and (min-width: #{$tablet-min}) and (max-width: #{$tablet-max}), screen and (min-width: #{$lg}) {
-    // padding-right: 3.5rem;
     // background-color:yellow;
   }
   @media screen and (max-width: #{$md}) {
-    // padding-right: inherit;
     // background-color: seagreen;
   }
 }
@@ -78,12 +33,6 @@
   // background-color: aliceblue;
   min-width: 10rem;
 }
-
-
-
-
-
-
 
 // removing bullets from sub-nav lists
 .field--name-field-subnav {
@@ -94,29 +43,29 @@
 
 //trying to force the sidebar to stay between 993px and 1086px
 // @media screen and (width: #{$lg-adjusted}) {
-@media screen and (max-width: #{$lg-adjusted}) and (min-width: #{$desktop}) {
-  article {
-    .layout--twocol-section--67-33 {
-      .layout__region--first {
-        flex: 0 1 67% !important;
-        // outline: 1px solid red;
-      }
-      .layout__region--second {
-        flex: 0 1 33% !important;
-        // outline: 1px solid blue;
-      }
-    }
-  }
+// @media screen and (max-width: #{$lg-adjusted}) and (min-width: #{$desktop}) {
+//   article {
+//     .layout--twocol-section--67-33 {
+//       .layout__region--first {
+//         flex: 0 1 67% !important;
+//         // outline: 1px solid red;
+//       }
+//       .layout__region--second {
+//         flex: 0 1 33% !important;
+//         // outline: 1px solid blue;
+//       }
+//     }
+//   }
 
-  /* Styles for desktop screens go here */
-  .not-mobile {
-    display: inherit;
-  }
+//   /* Styles for desktop screens go here */
+//   .not-mobile {
+//     display: inherit;
+//   }
 
-  .mobile-only {
-    display: none;
-  }
-}
+//   .mobile-only {
+//     display: none;
+//   }
+// }
 
 .two-col {
   display: grid;
